Add map & gamemode for start editor

--- a/WorldQuarantine/Config/DefaultEngine.ini
+++ b/WorldQuarantine/Config/DefaultEngine.ini
@@ -7,8 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/M_DebugLevel.M_DebugLevel
+GameDefaultMap=/Game/Maps/M_DebugLevel.M_DebugLevel
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_WorldQuarantineGM.BP_WorldQuarantineGM_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/WorldQuarantine")
